# matrix-market

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  readme.cpp
include/mm/: mm.hpp
script/: convert-all.sh  stats-all.sh
test/: CMakeLists.txt  test.cpp
tools/: CMakeLists.txt  kd.hpp  mtx_blocks.cpp  mtx_stats.cpp  mtx_to_ppm.cpp
